--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,9 @@
 {
+    "spellright.language": "pt",
+    "spellright.documentTypes": [
+        "markdown",
+        "latex",
+        "plaintext",
+        "html"
+    ]
 }
